--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ a {
     text-decoration: none;
 }
 
-a:visited {
+a:visited, a:hover, a:active {
     text-decoration: none;
     color: inherit;
 }
