--- a/styles.css
+++ b/styles.css
@@ -1,465 +1,545 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+  color: inherit;
 }
 
-a:visited, a:hover, a:active {
-    text-decoration: none;
-    color: inherit;
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+  color: inherit;
 }
 
 section:nth-child(odd) {
-    background-color: rgba(115, 66, 214, 0.1);
+  background-color: rgba(115, 66, 214, 0.1);
 }
 
 .text--purple {
-    color: #7342d6;
+  color: #7342d6;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Landing ---------------------------------------------------------------------------------*/
 
 nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 900px;
-    padding: 30px 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 900px;
+  padding: 30px 50px;
 }
 
 .logo {
-    width: 150px;
+  width: 150px;
 }
 
 .nav__links {
-    display: flex;
-    flex-direction: row;
-    width: 200px;
-    justify-content: space-between;
-    align-items: center;
-    color: #7342d6;
-    font-weight: 700;
+  display: flex;
+  flex-direction: row;
+  width: 200px;
+  justify-content: space-between;
+  align-items: center;
+  color: #7342d6;
+  font-weight: 700;
 }
 
 .nav__link:not(:last-child) {
-    position: relative;
+  position: relative;
 }
 
 .nav__link:not(:last-child):after {
-    content: "";
-    position: absolute;
-    height: 3px;
-    background-color: #7342d6;
-    width: 0;
-    bottom: -4px;
-    right: 0;
-    transition: all 300ms ease;
+  content: "";
+  position: absolute;
+  height: 3px;
+  background-color: #7342d6;
+  width: 0;
+  bottom: -4px;
+  right: 0;
+  transition: all 300ms ease;
 }
 
 .nav__link:not(:last-child):hover:after {
-    width: 100%;
-    left: 0;
+  width: 100%;
+  left: 0;
 }
 
 .nav__link:nth-last-child(1) {
-    border: 2px solid #7342d6;
-    border-radius: 5px;
-    padding: 5px;
+  border: 2px solid #7342d6;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .landing__title {
-    font-size: 40px;
-    width: 100%;
-    max-width: 600px;
-    padding: 30px 50px;
-    text-align: center;
-    color: #7342d6;
+  font-size: 40px;
+  width: 100%;
+  max-width: 600px;
+  padding: 30px 50px;
+  text-align: center;
+  color: #7342d6;
 }
 
 .landing__subtitle {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .bookslink {
-    background-color: #7342d6;
+  background-color: #7342d6;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+.browse__container {
     color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
     margin-top: 30px;
 }
 
 .introimg {
-    width: 100%;
-    max-width: 80%;
-    max-height: 50vh;
-    margin: 80px 50px 150px 50px;
+  width: 100%;
+  max-width: 80%;
+  max-height: 50vh;
+  margin: 80px 50px 150px 50px;
 }
 
 .btn__menu {
-    display: none;
+  display: none;
 }
 
 .menu__backdrop {
-    display: none;
+  display: none;
 }
 
 /* Highlights ---------------------------------------------------------------------------------*/
 
 .section__title {
-    font-size: 30px;
-    margin-top: 40px;
+  font-size: 30px;
+  margin-top: 40px;
 }
 
 .highlight__list {
-    width: 100%;
-    max-width: 900px;
-    padding: 30px 50px;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 30px;
+  width: 100%;
+  max-width: 900px;
+  padding: 30px 50px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 30px;
 }
 
 .highlight {
-    width: calc(100%/3);
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  width: calc(100% / 3);
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .highlight__icon {
-    width: 90px;
-    height: 90px;
-    border: solid 1px #c9c9c9;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    color: #7342d6;
+  width: 90px;
+  height: 90px;
+  border: solid 1px #c9c9c9;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: #7342d6;
 }
 
 .highlight__title {
-    margin: 20px;
-    font-size: 20px;
+  margin: 20px;
+  font-size: 20px;
 }
 
 .highlight__description {
-    padding: 0 20px;
-    font-size: 15px;
+  padding: 0 20px;
+  font-size: 15px;
 }
 
 #highlights {
-    position: relative;
-    max-width: 100vw;
+  position: relative;
+  max-width: 100vw;
 }
 
 #highlights:after,
 #highlights:before {
-    background: url('assets/wave.svg');
-    content: "";
-    position: absolute;
-    width: 101vw;
-    height: 12vw;
-    left: 0;
-    z-index: 1;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background: url("assets/wave.svg");
+  content: "";
+  position: absolute;
+  width: 101vw;
+  height: 12vw;
+  left: 0;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #highlights:before {
-    top: 1px;
-    transform: translateY(-100%);
+  top: 1px;
+  transform: translateY(-100%);
 }
 
 #highlights:after {
-    bottom: 1px;
-    transform: translateY(100%) rotate(180deg);
+  bottom: 1px;
+  transform: translateY(100%) rotate(180deg);
 }
 /* Books ---------------------------------------------------------------------------------*/
 
 #section__title--featured {
-    margin-top: 150px;
+  margin-top: 150px;
 }
 
 .books {
-    margin-top: 40px;
-    width: 100%;
-    max-width: 900px;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 30px;
-    padding: 0 30px;
-    flex-wrap: wrap;
+  margin-top: 40px;
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 30px;
+  padding: 0 30px;
+  flex-wrap: wrap;
 }
 
 .book__container {
-    width: calc(100%/4);
-    padding: 0 20px;
+  width: calc(100% / 4);
+  padding: 0 20px;
 }
 
 .book {
-    width: 100%;
-    aspect-ratio: 0.7;
-    transition: transform 200ms ease;
-    margin-top: 20px;
+  width: 100%;
+  aspect-ratio: 0.7;
+  transition: transform 200ms ease;
+  margin-top: 20px;
 }
 
 .book__title {
-    font-size: 17px;
-    margin: 10px 0;
-    min-height: 40px;
+  font-size: 17px;
+  margin: 10px 0;
+  min-height: 40px;
 }
 
 .book__stars {
-    color: #fabf2a;
-    margin-bottom: 10px;
+  color: #fabf2a;
+  margin-bottom: 10px;
 }
 
 .discount {
-    text-decoration: line-through;
-    color: gray;
+  text-decoration: line-through;
+  color: gray;
 }
 
 .book:hover {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 /* Explore ---------------------------------------------------------------------------------*/
 
 #explore {
-    padding-bottom: 40px;
+  padding-bottom: 40px;
 }
 
 /* Footer ---------------------------------------------------------------------------------*/
 
 footer {
-    background-color: #242424;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
+  background-color: #242424;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 }
 
 .footer__logo {
-    width: 160px;
-    filter: grayscale(1) invert(1);
-    margin: 30px;
+  width: 160px;
+  filter: grayscale(1) invert(1);
+  margin: 30px;
 }
 
 .footer__links {
-    width: 100%;
-    max-width: 300px;
-    display: flex;
-    justify-content: space-between;
-    transform: translateX(11px);
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  justify-content: space-between;
+  transform: translateX(11px);
 }
 
 .copyright {
-    margin: 30px;
-    font-size: 12px;
+  margin: 30px;
+  font-size: 12px;
 }
 
 .footer__link {
-    position: relative;
+  position: relative;
 }
 
 .footer__link:after {
-    content: "";
-    position: absolute;
-    height: 3px;
-    background-color: rgb(255, 255, 255);
-    width: 0;
-    bottom: -4px;
-    right: 0;
-    transition: all 300ms ease;
+  content: "";
+  position: absolute;
+  height: 3px;
+  background-color: rgb(255, 255, 255);
+  width: 0;
+  bottom: -4px;
+  right: 0;
+  transition: all 300ms ease;
 }
 
 .footer__link:hover:after {
-    width: 100%;
-    left: 0;
+  width: 100%;
+  left: 0;
 }
 
 /* Responsive Design ---------------------------------------------------------------------------------*/
 
 @media (max-width: 768px) {
-    .section__title {
-        font-size: 25px;
-    }
+  .section__title {
+    font-size: 25px;
+  }
 
-    .landing__title {
-        font-size: 35px;
-        max-width: 500px;
-    }
+  .landing__title {
+    font-size: 35px;
+    max-width: 500px;
+  }
 
-    .landing__subtitle {
-        font-size: 20px;
-    }
+  .landing__subtitle {
+    font-size: 20px;
+  }
 
-    .introimg {
-        margin-bottom: 100px;
-    }
+  .introimg {
+    margin-bottom: 100px;
+  }
 
-    .highlight__title {
-        font-size: 15px;
-    }
+  .highlight__title {
+    font-size: 15px;
+  }
 
-    .highlight__description {
-        font-size: 10px;
-    }
+  .highlight__description {
+    font-size: 10px;
+  }
 
-    #section__title--featured {
-        margin-top: 80px;
-    }
+  #section__title--featured {
+    margin-top: 80px;
+  }
 
-    .book__title {
-        font-size: 14px;
-    }
+  .book__title {
+    font-size: 14px;
+  }
 
-    .book__stars {
-        font-size: 9px;
-    }
+  .book__stars {
+    font-size: 9px;
+  }
 
-    .book__price {
-        font-size: 10px;
-    }
+  .book__price {
+    font-size: 10px;
+  }
 }
 
 @media (max-width: 480px) {
-    .section__title {
-        font-size: 20px;
-    }
+  .section__title {
+    font-size: 20px;
+  }
 
-    #section__title--featured {
-        margin-top: 50px;
-    }
+  #section__title--featured {
+    margin-top: 50px;
+  }
 
-    .nav__links {
-        display: none;
-    }
+  .nav__links {
+    display: none;
+  }
 
-    .btn__menu {
-        display: flex;
-        width: 30px;
-        height: 30px;
-        font-size: 30px;
-        padding: 0;
-        background: none;
-        border: none;
-        color: #7342d6;
-    }
-    
-    .menu__backdrop {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color:#242424;
-        color: white;
-        z-index: 3;
-        transform: translateX(-50px) translateY(-30px);
-        justify-content: center;
-        align-items: center;
-    }
+  .btn__menu {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
+    padding: 0;
+    background: none;
+    border: none;
+    color: #7342d6;
+  }
 
-    .menu--open .menu__backdrop {
-        display: flex;
-    }
+  .menu__backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #242424;
+    color: white;
+    z-index: 3;
+    transform: translateX(-50px) translateY(-30px);
+    justify-content: center;
+    align-items: center;
+  }
 
-    .btn__menu--close {
-        position: absolute;
-        right: 50px;
-        top: 30px;
-        color: white;
-    }
+  .menu--open .menu__backdrop {
+    display: flex;
+  }
 
-    .btn__menu--list {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .btn__menu--close {
+    position: absolute;
+    right: 50px;
+    top: 30px;
+    color: white;
+  }
 
-    .btn__menu--item {
-        font-size: 40px;
-        margin: 20px 0;
-    }
+  .btn__menu--list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .landing__title {
-        font-size: 25px;
-    }
+  .btn__menu--item {
+    font-size: 40px;
+    margin: 20px 0;
+  }
 
-    .landing__subtitle {
-        font-size: 15px;
-    }
+  .landing__title {
+    font-size: 25px;
+  }
 
-    button {
-        font-size: 12px;
-    }
+  .landing__subtitle {
+    font-size: 15px;
+  }
 
-    .highlight__icon {
-        width: 60px;
-        height: 60px;
-    }
+  button {
+    font-size: 12px;
+  }
 
-    .highlight__title {
-        font-size: 10px;
-        margin: 10px 5px;
-    }
+  .highlight__icon {
+    width: 60px;
+    height: 60px;
+  }
 
-    .highlight__description {
-        font-size: 10px;
-        margin: 0;
-    }
+  .highlight__title {
+    font-size: 10px;
+    margin: 10px 5px;
+  }
 
-    .books {
-        margin: 10px 0;
-    }
+  .highlight__description {
+    font-size: 10px;
+    margin: 0;
+  }
 
-    .book__container {
-        padding: 0 10px;
-        width: calc(100%/2)
-    }
+  .books {
+    margin: 10px 0;
+  }
 
-    .book__title {
-        font-size: 20px;
-    }
+  .book__container {
+    padding: 0 10px;
+    width: calc(100% / 2);
+  }
 
-    .book__stars {
-        font-size: 12px;
-    }
+  .book__title {
+    font-size: 20px;
+  }
 
-    .book__price {
-        font-size: 15px;
-    }
+  .book__stars {
+    font-size: 12px;
+  }
 
-    .footer__links {
-        transform: none;
-    }
+  .book__price {
+    font-size: 15px;
+  }
+
+  .footer__links {
+    transform: none;
+  }
+}
+
+/* Bookstore */
+
+#bookstore {
+  height: fit-content;
+  min-height: 100vh;
+}
+
+select {
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid #dcdfe6;
+  color: #606266;
+  height: 40px;
+  line-height: 40px;
+  outline: none;
+  padding: 0 16px;
+  width: 100%;
+  max-width: 200px;
+}
+
+.books {
+  max-width: 1200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+}
+
+.books__loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 60px;
+  color: #7342d6;
+}
+
+.spinner {
+    display: none;
+}
+
+.books__loading .spinner {
+    display: flex;
+}
+
+.fa-spinner {
+  animation: rotate 600ms infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+
+.books__title {
+  font-size: 30px;
 }
